[package]
name = "cc_tp2_22_23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fstp"
path = "src/fstp/mod.rs"

[[bin]]
name = "tracker"
path = "src/tracker.rs"


[[bin]]
name = "node"
path = "src/node.rs"

[dependencies]
anyhow = "1.0.75"
serde = "1.0.189"
