[package]
name = "node"
version = "0.1.0"
edition = "2021"

[lib]
name = "protocol"
path = "src/FSNode_Protocol.rs"

[[bin]]
name = "main"
path = "src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
array-init = "2.1.0"
